tests/semanticDiff-different-topologies-policy-b/diff_output_from_semanticDiff-different-topologies-policy-a.txt
Connectivity diff:
diff-type: added, source: 0.0.0.0-255.255.255.255, destination: default/cog-agents-1[DaemonSet], ref1:  No Connections, ref2: All Connections
diff-type: added, source: 0.0.0.0-255.255.255.255, destination: default/cog-agents-5[DaemonSet], ref1:  No Connections, ref2: All Connections, workloads-diff-info: workload default/cog-agents-5[DaemonSet] added
diff-type: added, source: 0.0.0.0-255.255.255.255, destination: default/cog-agents-6[DaemonSet], ref1:  No Connections, ref2: All Connections, workloads-diff-info: workload default/cog-agents-6[DaemonSet] added
diff-type: added, source: default/cog-agents-0[DaemonSet], destination: default/cog-agents-1[DaemonSet], ref1:  No Connections, ref2: All Connections
diff-type: added, source: default/cog-agents-0[DaemonSet], destination: default/cog-agents-5[DaemonSet], ref1:  No Connections, ref2: All Connections, workloads-diff-info: workload default/cog-agents-5[DaemonSet] added
diff-type: added, source: default/cog-agents-0[DaemonSet], destination: default/cog-agents-6[DaemonSet], ref1:  No Connections, ref2: All Connections, workloads-diff-info: workload default/cog-agents-6[DaemonSet] added
diff-type: added, source: default/cog-agents-1[DaemonSet], destination: default/cog-agents-5[DaemonSet], ref1:  No Connections, ref2: All Connections, workloads-diff-info: workload default/cog-agents-5[DaemonSet] added
diff-type: added, source: default/cog-agents-1[DaemonSet], destination: default/cog-agents-6[DaemonSet], ref1:  No Connections, ref2: All Connections, workloads-diff-info: workload default/cog-agents-6[DaemonSet] added
diff-type: added, source: default/cog-agents-2[DaemonSet], destination: default/cog-agents-5[DaemonSet], ref1:  No Connections, ref2: All Connections, workloads-diff-info: workload default/cog-agents-5[DaemonSet] added
diff-type: added, source: default/cog-agents-2[DaemonSet], destination: default/cog-agents-6[DaemonSet], ref1:  No Connections, ref2: All Connections, workloads-diff-info: workload default/cog-agents-6[DaemonSet] added
diff-type: added, source: default/cog-agents-5[DaemonSet], destination: 0.0.0.0-255.255.255.255, ref1:  No Connections, ref2: All Connections, workloads-diff-info: workload default/cog-agents-5[DaemonSet] added
diff-type: added, source: default/cog-agents-5[DaemonSet], destination: default/cog-agents-0[DaemonSet], ref1:  No Connections, ref2: All Connections, workloads-diff-info: workload default/cog-agents-5[DaemonSet] added
diff-type: added, source: default/cog-agents-5[DaemonSet], destination: default/cog-agents-1[DaemonSet], ref1:  No Connections, ref2: All Connections, workloads-diff-info: workload default/cog-agents-5[DaemonSet] added
diff-type: added, source: default/cog-agents-5[DaemonSet], destination: default/cog-agents-6[DaemonSet], ref1:  No Connections, ref2: All Connections, workloads-diff-info: workload default/cog-agents-5[DaemonSet] and default/cog-agents-6[DaemonSet] added
diff-type: added, source: default/cog-agents-6[DaemonSet], destination: 0.0.0.0-255.255.255.255, ref1:  No Connections, ref2: All Connections, workloads-diff-info: workload default/cog-agents-6[DaemonSet] added
diff-type: added, source: default/cog-agents-6[DaemonSet], destination: default/cog-agents-0[DaemonSet], ref1:  No Connections, ref2: All Connections, workloads-diff-info: workload default/cog-agents-6[DaemonSet] added
diff-type: added, source: default/cog-agents-6[DaemonSet], destination: default/cog-agents-1[DaemonSet], ref1:  No Connections, ref2: All Connections, workloads-diff-info: workload default/cog-agents-6[DaemonSet] added
diff-type: added, source: default/cog-agents-6[DaemonSet], destination: default/cog-agents-5[DaemonSet], ref1:  No Connections, ref2: All Connections, workloads-diff-info: workload default/cog-agents-6[DaemonSet] and default/cog-agents-5[DaemonSet] added
diff-type: removed, source: 0.0.0.0-255.255.255.255, destination: default/cog-agents-2[DaemonSet], ref1:  All Connections, ref2: No Connections
diff-type: removed, source: 0.0.0.0-255.255.255.255, destination: default/cog-agents-3[DaemonSet], ref1:  All Connections, ref2: No Connections, workloads-diff-info: workload default/cog-agents-3[DaemonSet] removed
diff-type: removed, source: 0.0.0.0-255.255.255.255, destination: default/cog-local-analyzer-7d77fb55cc[ReplicaSet], ref1:  All Connections, ref2: No Connections, workloads-diff-info: workload default/cog-local-analyzer-7d77fb55cc[ReplicaSet] removed
diff-type: removed, source: default/cog-agents-0[DaemonSet], destination: default/cog-agents-2[DaemonSet], ref1:  All Connections, ref2: No Connections
diff-type: removed, source: default/cog-agents-0[DaemonSet], destination: default/cog-agents-3[DaemonSet], ref1:  All Connections, ref2: No Connections, workloads-diff-info: workload default/cog-agents-3[DaemonSet] removed
diff-type: removed, source: default/cog-agents-0[DaemonSet], destination: default/cog-local-analyzer-7d77fb55cc[ReplicaSet], ref1:  All Connections, ref2: No Connections, workloads-diff-info: workload default/cog-local-analyzer-7d77fb55cc[ReplicaSet] removed
diff-type: removed, source: default/cog-agents-1[DaemonSet], destination: default/cog-agents-3[DaemonSet], ref1:  All Connections, ref2: No Connections, workloads-diff-info: workload default/cog-agents-3[DaemonSet] removed
diff-type: removed, source: default/cog-agents-1[DaemonSet], destination: default/cog-local-analyzer-7d77fb55cc[ReplicaSet], ref1:  All Connections, ref2: No Connections, workloads-diff-info: workload default/cog-local-analyzer-7d77fb55cc[ReplicaSet] removed
diff-type: removed, source: default/cog-agents-2[DaemonSet], destination: default/cog-agents-3[DaemonSet], ref1:  All Connections, ref2: No Connections, workloads-diff-info: workload default/cog-agents-3[DaemonSet] removed
diff-type: removed, source: default/cog-agents-2[DaemonSet], destination: default/cog-local-analyzer-7d77fb55cc[ReplicaSet], ref1:  All Connections, ref2: No Connections, workloads-diff-info: workload default/cog-local-analyzer-7d77fb55cc[ReplicaSet] removed
diff-type: removed, source: default/cog-agents-3[DaemonSet], destination: 0.0.0.0-255.255.255.255, ref1:  All Connections, ref2: No Connections, workloads-diff-info: workload default/cog-agents-3[DaemonSet] removed
diff-type: removed, source: default/cog-agents-3[DaemonSet], destination: default/cog-agents-0[DaemonSet], ref1:  All Connections, ref2: No Connections, workloads-diff-info: workload default/cog-agents-3[DaemonSet] removed
diff-type: removed, source: default/cog-agents-3[DaemonSet], destination: default/cog-agents-2[DaemonSet], ref1:  All Connections, ref2: No Connections, workloads-diff-info: workload default/cog-agents-3[DaemonSet] removed
diff-type: removed, source: default/cog-agents-3[DaemonSet], destination: default/cog-local-analyzer-7d77fb55cc[ReplicaSet], ref1:  All Connections, ref2: No Connections, workloads-diff-info: workload default/cog-agents-3[DaemonSet] and default/cog-local-analyzer-7d77fb55cc[ReplicaSet] removed
diff-type: removed, source: default/cog-local-analyzer-7d77fb55cc[ReplicaSet], destination: 0.0.0.0-255.255.255.255, ref1:  All Connections, ref2: No Connections, workloads-diff-info: workload default/cog-local-analyzer-7d77fb55cc[ReplicaSet] removed
diff-type: removed, source: default/cog-local-analyzer-7d77fb55cc[ReplicaSet], destination: default/cog-agents-0[DaemonSet], ref1:  All Connections, ref2: No Connections, workloads-diff-info: workload default/cog-local-analyzer-7d77fb55cc[ReplicaSet] removed
diff-type: removed, source: default/cog-local-analyzer-7d77fb55cc[ReplicaSet], destination: default/cog-agents-2[DaemonSet], ref1:  All Connections, ref2: No Connections, workloads-diff-info: workload default/cog-local-analyzer-7d77fb55cc[ReplicaSet] removed
diff-type: removed, source: default/cog-local-analyzer-7d77fb55cc[ReplicaSet], destination: default/cog-agents-3[DaemonSet], ref1:  All Connections, ref2: No Connections, workloads-diff-info: workload default/cog-local-analyzer-7d77fb55cc[ReplicaSet] and default/cog-agents-3[DaemonSet] removed
