tests/semanticDiff-different-topologies-policy-b/pods_list_b.json
{
  "apiVersion": "v1",
  "kind": "PodList",
  "items": [
    {
      "apiVersion": "v1",
      "kind": "Pod",
      "metadata": {
        "name": "pod-0",
        "namespace": "default",
        "labels": {
          "app": "app-0"
        },
        "ownerReferences": [
          {
            "apiVersion": "extensions/v1beta1",
            "kind": "DaemonSet",
            "name": "cog-agents-0",
            "uid": "14265cc3-301f-11e8-865c-52075433990e",
            "controller": true,
            "blockOwnerDeletion": true
          }
        ]
      },
      "spec": {
        "containers": [
          {
            "ports": {}
          }
        ]
      }
    },
    {
      "apiVersion": "v1",
      "kind": "Pod",
      "metadata": {
        "name": "pod-1",
        "namespace": "default",
        "labels": {
          "app": "app-1"
        },
        "ownerReferences": [
          {
            "apiVersion": "extensions/v1beta1",
            "kind": "DaemonSet",
            "name": "cog-agents-1",
            "uid": "14265cc3-301f-11e8-865c-52075433990e",
            "controller": true,
            "blockOwnerDeletion": true
          }
        ]
      },
      "spec": {
        "containers": [
          {
            "ports": {}
          }
        ]
      }
    },
    {
      "apiVersion": "v1",
      "kind": "Pod",
      "metadata": {
        "name": "pod-2",
        "namespace": "default",
        "labels": {
          "app": "app-2"
        },
        "ownerReferences": [
          {
            "apiVersion": "extensions/v1beta1",
            "kind": "DaemonSet",
            "name": "cog-agents-2",
            "uid": "14265cc3-301f-11e8-865c-52075433990e",
            "controller": true,
            "blockOwnerDeletion": true
          }
        ]
      },
      "spec": {
        "containers": [
          {
            "ports": {}
          }
        ]
      }
    },
    {
      "apiVersion": "v1",
      "kind": "Pod",
      "metadata": {
        "name": "pod-5",
        "namespace": "default",
        "labels": {
          "app": "app-5"
        },
        "ownerReferences": [
          {
            "apiVersion": "extensions/v1beta1",
            "kind": "DaemonSet",
            "name": "cog-agents-5",
            "uid": "14265cc3-301f-11e8-865c-52075433990e",
            "controller": true,
            "blockOwnerDeletion": true
          }
        ]
      },
      "spec": {
        "containers": [
          {
            "ports": {}
          }
        ]
      }
    },
    {
      "apiVersion": "v1",
      "kind": "Pod",
      "metadata": {
        "name": "pod-6",
        "namespace": "default",
        "labels": {
          "app": "app-6"
        },
        "ownerReferences": [
          {
            "apiVersion": "extensions/v1beta1",
            "kind": "DaemonSet",
            "name": "cog-agents-6",
            "uid": "14265cc3-301f-11e8-865c-52075433990e",
            "controller": true,
            "blockOwnerDeletion": true
          }
        ]
      },
      "spec": {
        "containers": [
          {
            "ports": {}
          }
        ]
      }
    }
  ]
}
