tests/semanticDiff-different-topologies-policy-b/connlist_output.txt
0.0.0.0-255.255.255.255 => default/cog-agents-0[DaemonSet] : All Connections
0.0.0.0-255.255.255.255 => default/cog-agents-1[DaemonSet] : All Connections
0.0.0.0-255.255.255.255 => default/cog-agents-5[DaemonSet] : All Connections
0.0.0.0-255.255.255.255 => default/cog-agents-6[DaemonSet] : All Connections
default/cog-agents-0[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
default/cog-agents-0[DaemonSet] => default/cog-agents-1[DaemonSet] : All Connections
default/cog-agents-0[DaemonSet] => default/cog-agents-5[DaemonSet] : All Connections
default/cog-agents-0[DaemonSet] => default/cog-agents-6[DaemonSet] : All Connections
default/cog-agents-1[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
default/cog-agents-1[DaemonSet] => default/cog-agents-0[DaemonSet] : All Connections
default/cog-agents-1[DaemonSet] => default/cog-agents-2[DaemonSet] : All Connections
default/cog-agents-1[DaemonSet] => default/cog-agents-5[DaemonSet] : All Connections
default/cog-agents-1[DaemonSet] => default/cog-agents-6[DaemonSet] : All Connections
default/cog-agents-2[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
default/cog-agents-2[DaemonSet] => default/cog-agents-0[DaemonSet] : All Connections
default/cog-agents-2[DaemonSet] => default/cog-agents-1[DaemonSet] : All Connections
default/cog-agents-2[DaemonSet] => default/cog-agents-5[DaemonSet] : All Connections
default/cog-agents-2[DaemonSet] => default/cog-agents-6[DaemonSet] : All Connections
default/cog-agents-5[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
default/cog-agents-5[DaemonSet] => default/cog-agents-0[DaemonSet] : All Connections
default/cog-agents-5[DaemonSet] => default/cog-agents-1[DaemonSet] : All Connections
default/cog-agents-5[DaemonSet] => default/cog-agents-6[DaemonSet] : All Connections
default/cog-agents-6[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
default/cog-agents-6[DaemonSet] => default/cog-agents-0[DaemonSet] : All Connections
default/cog-agents-6[DaemonSet] => default/cog-agents-1[DaemonSet] : All Connections
default/cog-agents-6[DaemonSet] => default/cog-agents-5[DaemonSet] : All Connections
